Client Side Authentication Done.

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-NEXT_PUBLIC_BACKEND_URL="http://localhost:8000/api"
-NEXT_PUBLIC_GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
+# NEXT_PUBLIC_REVERB_APP_ID=206883
+# NEXT_PUBLIC_REVERB_APP_KEY=fl0ae9t71gdvyeyctrre
+# NEXT_PUBLIC_REVERB_APP_SECRET=1gloi8nm4qmqmeefaf7h
+# NEXT_PUBLIC_REVERB_HOST="localhost"
+# NEXT_PUBLIC_REVERB_PORT=8080
+# NEXT_PUBLIC_REVERB_SCHEME=http
+
+NEXT_PUBLIC_BACKEND_URL="https://secure.toletbd.app"
