--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,17 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:8000/api"
+NEXT_PUBLIC_BASE_URL="http://localhost:8000/api/v1"
+NEXT_PUBLIC_BROADCASTING_URL="http://localhost:8000"
 NEXT_PUBLIC_STORAGE_URL="http://localhost:8000/"
 
-SERVER_BASE_URL="http://localhost:8000/api"
+SERVER_BASE_URL="http://localhost:8000/api/v1"
 SERVER_STORAGE_URL="http://localhost:8000/"
 
-NEXT_PUBLIC_BACKEND_URL="http://localhost:8000/api"
-NEXT_PUBLIC_GOOGLE_CLIENT_ID="708501308719-v6sladtnqlr74lh583j0rveac8hrcobi.apps.googleusercontent.com"
+NEXT_PUBLIC_REVERB_APP_ID=206883
+NEXT_PUBLIC_REVERB_APP_KEY=fl0ae9t71gdvyeyctrre
+NEXT_PUBLIC_REVERB_APP_SECRET=1gloi8nm4qmqmeefaf7h
+NEXT_PUBLIC_REVERB_HOST="localhost"
+NEXT_PUBLIC_REVERB_PORT=8080
+NEXT_PUBLIC_REVERB_SCHEME=http
+
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 
 
